--- a/index.html
+++ b/index.html
@@ -3,6 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>Business Is Good Chatbot</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url('https://raw.githubusercontent.com/VelarIQ/bigagent-repo/main/header.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    h1 {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      border-radius: 10px;
+      display: inline-block;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome to Business Is Good</h1>
@@ -18,6 +43,5 @@
     data-starting-message="Hey there 👋 Welcome to Business Is Good! Where doing the right thing is the business model."
     data-logo="/static/chatbot/icons/default-agent.svg">
   </script>
-
 </body>
 </html>
