--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
   <title>Business Is Good Chatbot</title>
   <style>
     body {
-      background-image: url('https://raw.githubusercontent.com/VelarIQ/bigagent-repo/main/header.png');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+      background-color: #031B4E;
       height: 100vh;
       margin: 0;
       padding: 0;
       color: white;
       font-family: Arial, sans-serif;
-      text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      text-align: center;
     }
 
     .logo {
@@ -37,12 +34,12 @@
 </head>
 <body>
 
-  <!-- 👇 Add your logo here -->
-  <img class="logo" src="https://raw.githubusercontent.com/VelarIQ/bigagent-repo/main/header.png" alt="Business Is Good Logo" />
+  <!-- 👇 Centered BIG logo -->
+  <img class="logo" src="https://raw.githubusercontent.com/VelarIQ/bigagent-repo/main/big-logo.png" alt="Business Is Good Logo" />
 
   <h1>Welcome to Business Is Good</h1>
 
-  <!-- Chatbot script -->
+  <!-- 👇 Embedded chatbot -->
   <script async
     src="https://zhxpbomquysq34ykcsmc5tys.agents.do-ai.run/static/chatbot/widget.js"
     data-agent-id="19f85b76-6654-11f0-bf8f-4e013e2ddde4"
@@ -54,5 +51,6 @@
     data-starting-message="Hey there 👋 Welcome to Business Is Good! Where doing the right thing is the business model."
     data-logo="/static/chatbot/icons/default-agent.svg">
   </script>
+
 </body>
 </html>
