--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Business Is Good Chatbot</title>
   <style>
     body {
-      background-color: #031B4E;
-      height: 50vh;
+      background-color: #ffffff; /* White background */
+      height: 100vh;
       margin: 0;
       padding: 0;
-      color: white;
+      color: #031B4E;
       font-family: Arial, sans-serif;
       display: flex;
       flex-direction: column;
@@ -25,7 +25,7 @@
     }
 
     h1 {
-      background-color: rgba(0, 0, 0, 0.6);
+      background-color: rgba(3, 27, 78, 0.1); /* subtle blue overlay */
       padding: 20px;
       border-radius: 10px;
       margin: 0;
@@ -34,8 +34,8 @@
 </head>
 <body>
 
-  <!-- 👇 Centered BIG logo -->
-  <img class="logo" src="https://raw.githubusercontent.com/VelarIQ/bigagent-repo/main/big-logo.png" alt="Business Is Good Logo" />
+  <!-- 👇 Use header.png as the logo -->
+  <img class="logo" src="https://raw.githubusercontent.com/VelarIQ/bigagent-repo/main/header.png" alt="Business Is Good Logo" />
 
   <h1>Welcome to Business Is Good</h1>
 
